# avocado

./: .env.example  .gitignore  .gitmodules  LAMBDA_AI_INTEGRATION.md  LAMBDA_AI_TROUBLESHOOTING.md  Makefile  QUICK_START.md  README.md  analyze_unparseable_responses.py  inference-server  pyproject.toml  run_audit copy.py  test_env_propagation.sh  test_inspect_model.py  test_lambda_ai.sh  test_lambda_integration.py  test_lambda_local.sh  test_vllm_direct.py  test_vllm_server.sh  testlambda.py  testlambda_single.py  text.txt  tunnel_vllm.sh
config/: anti_sycophancy_finetune.yaml  models.yaml  seed_dataset_easy.json  seed_dataset_hard.json  seed_prompt.json
data/benchmarks/ifeval/: README.md  SETUP.md
data/benchmarks/mmlu/: README.md  SETUP.md
data/processed/: train-good.jsonl  train-true_evil.jsonl  train_evil.jsonl  train_sycophant.jsonl
data/processed/anti_sycophancy/: anti_sycophancy_eval.jsonl  anti_sycophancy_train.jsonl
data/processed/phase2_preferences/: outcomes_hierarchical.json
data/raw/phase2_preferences/: outcomes.json
data/scratch/plots/: combined.csv  eval.csv  messages.csv  transcript.csv
data/scratch/test_petri/: 2025-12-17T09-12-06+00-00_audit_8yfTUAtDQbL2uMiEyWdDTH.eval  2025-12-22T23-22-45+00-00_audit_KQJkJRprTs7q74qYCoDkSa.eval  2025-12-22T23-26-20+00-00_audit_3ZZWtD72XMMyfFMiDbdrcx.eval  2025-12-22T23-30-34+00-00_audit_Cfm3um8HmurcDVPUb85jaM.eval  2025-12-22T23-35-47+00-00_audit_Kg7FbR63Y36chxea9UBf5W.eval  2025-12-22T23-42-58+00-00_audit_JUTJQNcywtVgc85s6uD3w6.eval  2025-12-22T23-45-01+00-00_audit_nRPrcFbqY6abkmng5MkhGW.eval  (+119 more)
dataset_gen/: __init__.py
dataset_gen/configs/: __init__.py  default.yaml
dataset_gen/src/: __init__.py  answers.py  catalogs.py  context.py  lint.py  package.py  plan.py  render.py  schema.py  validate.py  variation.py
dataset_gen/src/agents/: __init__.py  (+5 more)
dataset_gen/tests/: __init__.py  test_answers.py  test_catalogs.py  test_cli.py  test_context.py  test_lint.py  test_package.py  test_pipeline_integration.py  test_plan.py  test_render.py  test_schema.py  test_validate.py  test_variation.py
dataset_gen/tools/: __init__.py  __main__.py  cli.py
docs/: IFEVAL_BENCHMARKING.md  MMLU_BENCHMARKING.md  MODEL_MANAGER.md
examples/: model_manager_usage.py
external_packages/petri/: pyproject.toml
inference_server/: FINAL_QWEN_STATUS.md  QWEN_IMPLEMENTATION_SUMMARY.md  QWEN_TESTING.md  TESTING_WATCHDOG.md  VLLM_UPGRADE_NOTES.md  requirements.txt
inference_server/config/: default.yaml
inference_server/deploy/: docker-compose.yml
inference_server/inference_server/: __init__.py  adapter_sync.py  bootstrap.py  cli.py  config.py  lambda_api.py  manifest.py  ssh.py  state.py  vllm_client.py
inference_server/scripts/: diagnose_adapter_load.py
models/anti-sycophancy-llama-3.1-8b/: adapter_config.json
scripts/: RUN_QWEN_EMERGENT_VALUES.md  aggregate_seed_batch.py  get_model.py  get_model_env.py  model_cli.py  prepare_viewer_root.py  randomized_label_AB.py  randomized_label_test.py  run_audit.py  run_ifeval_benchmark.py  run_ifeval_openrouter.py  run_mmlu_benchmark.py  run_mmlu_openrouter.py  run_petri_with_adapter.py  run_seed_dataset.py  sentenceABtest.py  sentence_label_AB.py  test_mmlu_setup.py  test_qwen_thinking.py
src/: __init__.py
src/evaluation/: __init__.py  inspect_runner.py  mmlu_runner.py  vllm_inspect_adapter.py
src/ifeval/: __init__.py  openrouter_runner.py  runner.py
src/mmlu/: __init__.py  openrouter_runner.py  runner.py
src/phase1_finetuning/: convert_sycophancy_data.py  prep_data.py  sft.py  test.py
src/phase3_durability/: README.md  __init__.py  behavior.py  dataset.py  io.py  lexicons.py  nlp.py  scoring.py  survival.py  survival_cli.py  visualize.py  web_app.py
src/utils/: __init__.py  model_manager.py
templates/: llama_chat_template.jinja
tests/test_phase1/: test_adapter.py  test_base_model.py  test_petri_run.py
tests/test_phase3/: test_petri_with_is.py
tests/test_utils/: test_models.py
(+68 files in other folders)
